app/lib/core_bindings/lenny_bindings.dart


  late final _lenny_session_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<lenny_session>)>
      >('lenny_session_destroy');
  late final _lenny_session_destroy = _lenny_session_destroyPtr
      .asFunction<void Function(ffi.Pointer<lenny_session>)>();

  int lenny_session_disconnect(ffi.Pointer<lenny_session> s) {
    return _lenny_session_disconnect(s);
  }

  late final _lenny_session_disconnectPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<lenny_session>)>
      >('lenny_session_disconnect');
  late final _lenny_session_disconnect = _lenny_session_disconnectPtr
      .asFunction<int Function(ffi.Pointer<lenny_session>)>();

  int lenny_session_get_stats(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_stats> out,
  ) {
    return _lenny_session_get_stats(s, out);
  }

  late final _lenny_session_get_statsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_stats>,
          )
        >
      >('lenny_session_get_stats');
  late final _lenny_session_get_stats = _lenny_session_get_statsPtr
      .asFunction<
        int Function(ffi.Pointer<lenny_session>, ffi.Pointer<lenny_stats>)
      >();

  int lenny_session_peer(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_peer_info> out,
  ) {
    return _lenny_session_peer(s, out);
  }

  late final _lenny_session_peerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_peer_info>,
          )
        >
      >('lenny_session_peer');
  late final _lenny_session_peer = _lenny_session_peerPtr
      .asFunction<
        int Function(ffi.Pointer<lenny_session>, ffi.Pointer<lenny_peer_info>)
      >();

  int lenny_session_set_event_listener(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user,
          ffi.Int32 event,
          ffi.Int32 a,
          ffi.Int32 b,
        )
      >
    >
    fn,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lenny_session_set_event_listener(s, fn, user);
  }

  late final _lenny_session_set_event_listenerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<ffi.Void> user,
                  ffi.Int32 event,
                  ffi.Int32 a,
                  ffi.Int32 b,
                )
              >
            >,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('lenny_session_set_event_listener');
  late final _lenny_session_set_event_listener =
      _lenny_session_set_event_listenerPtr
          .asFunction<
            int Function(
              ffi.Pointer<lenny_session>,
              ffi.Pointer<
                ffi.NativeFunction<
                  ffi.Void Function(
                    ffi.Pointer<ffi.Void> user,
                    ffi.Int32 event,
                    ffi.Int32 a,
                    ffi.Int32 b,
                  )
                >
              >,
              ffi.Pointer<ffi.Void>,
            )
          >();

  int lenny_session_state(ffi.Pointer<lenny_session> s) {
    return _lenny_session_state(s);
  }

  late final _lenny_session_statePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<lenny_session>)>
      >('lenny_session_state');
  late final _lenny_session_state = _lenny_session_statePtr
      .asFunction<int Function(ffi.Pointer<lenny_session>)>();

  int lenny_session_stream_settings(
    ffi.Pointer<lenny_session> s,
    ffi.Pointer<lenny_stream_settings> out,
  ) {
    return _lenny_session_stream_settings(s, out);
  }

  late final _lenny_session_stream_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<lenny_session>,
            ffi.Pointer<lenny_stream_settings>,
          )
        >
      >('lenny_session_stream_settings');
  late final _lenny_session_stream_settings = _lenny_session_stream_settingsPtr
      .asFunction<
        int Function(
          ffi.Pointer<lenny_session>,
          ffi.Pointer<lenny_stream_settings>,
        )
      >();
}

const int LENNY_ABI_VERSION_MAJOR = 1;

const int LENNY_ABI_VERSION_MINOR = 3;

const int LENNY_ACK_BUSY = 3;

const int LENNY_ACK_FAILED = 2;

const int LENNY_ACK_OK = 0;

const int LENNY_ACK_UNSUPPORTED = 1;

const int LENNY_CAP_EXPOSURE_COMP = 4;

const int LENNY_CAP_EXPOSURE_LOCK = 8;

const int LENNY_CAP_FOCUS = 1;

const int LENNY_CAP_FOCUS_LOCK = 2;

const int LENNY_CAP_LENS = 64;

const int LENNY_CAP_PAN = 256;

const int LENNY_CAP_TORCH = 32;

const int LENNY_CAP_WB_LOCK = 16;

const int LENNY_CAP_ZOOM = 128;

const int LENNY_CODEC_H264 = 1;

const int LENNY_DEFAULT_PORT = 47474;

const int LENNY_DEVICE_ID_SIZE = 16;

const int LENNY_E_INTERNAL = -4;

const int LENNY_E_INVALID_ARG = -1;

const int LENNY_E_IO = -3;

const int LENNY_E_STATE = -2;

const int LENNY_FRAME_KEYFRAME = 1;

const int LENNY_FRAME_MIRROR = 2;

const int LENNY_MAX_PEER_LENSES = 8;

const int LENNY_MAX_PEER_MODES = 32;

const int LENNY_OK = 0;

const int LENNY_PAIR_ALREADY_USED = 3;

const int LENNY_PAIR_DENIED = 4;

const int LENNY_PAIR_EXPIRED = 2;

const int LENNY_PAIR_OK = 0;

const int LENNY_PAIR_TOKEN_SIZE = 16;

const int LENNY_PAIR_UNKNOWN_TOKEN = 1;

const int LENNY_PLATFORM_ANDROID = 1;

const int LENNY_PLATFORM_IOS = 2;

const int LENNY_PLATFORM_LINUX = 5;

const int LENNY_PLATFORM_WINDOWS = 3;

const int LENNY_REASON_BUSY = 4;

const int LENNY_REASON_LINK_LOST = 100;

const int LENNY_REASON_NORMAL = 0;

const int LENNY_REASON_PAIR_DENIED = 3;

const int LENNY_REASON_PROTOCOL_ERROR = 6;

const int LENNY_REASON_ROLE = 2;

const int LENNY_REASON_TIMEOUT = 5;

const int LENNY_REASON_USER = 7;

const int LENNY_REASON_VERSION = 1;

const int LENNY_STREAM_CAMERA_LOST = 2;

const int LENNY_STREAM_LIVE = 0;

const int LENNY_STREAM_PAUSED = 1;

const int LENNY_STREAM_THERMAL = 3;

final class lenny_control extends ffi.Struct {
  @ffi.Uint32()
  external int req_id;

  @ffi.Uint16()
  external int cmd;

  @ffi.Uint16()
  external int x;

  @ffi.Uint16()
  external int y;

  @ffi.Int32()
  external int value;

  static ffi.Pointer<lenny_control> $allocate(
    ffi.Allocator $allocator, {
    required int req_id,
    required int cmd,
    required int x,
    required int y,
    required int value,
  }) => $allocator<lenny_control>()
    ..ref.req_id = req_id
    ..ref.cmd = cmd
    ..ref.x = x
    ..ref.y = y
    ..ref.value = value;
}

enum lenny_control_cmd {
  LENNY_CTL_KEYFRAME_REQUEST(10),
  LENNY_CTL_FOCUS_AT(11),
  LENNY_CTL_FOCUS_LOCK(12),
  LENNY_CTL_FOCUS_AUTO(13),
  LENNY_CTL_EXPOSURE_COMP(14),
  LENNY_CTL_EXPOSURE_LOCK(15),
  LENNY_CTL_WB_LOCK(16),
  LENNY_CTL_TORCH(17),
  LENNY_CTL_SELECT_LENS(18),
  LENNY_CTL_ZOOM(19),
  LENNY_CTL_RESET_AUTO(20),
  LENNY_CTL_PAN(21);

  final int value;
  const lenny_control_cmd(this.value);

  static lenny_control_cmd fromValue(int value) => switch (value) {
    10 => LENNY_CTL_KEYFRAME_REQUEST,
    11 => LENNY_CTL_FOCUS_AT,
    12 => LENNY_CTL_FOCUS_LOCK,
    13 => LENNY_CTL_FOCUS_AUTO,
    14 => LENNY_CTL_EXPOSURE_COMP,
    15 => LENNY_CTL_EXPOSURE_LOCK,
    16 => LENNY_CTL_WB_LOCK,
    17 => LENNY_CTL_TORCH,
    18 => LENNY_CTL_SELECT_LENS,
    19 => LENNY_CTL_ZOOM,
    20 => LENNY_CTL_RESET_AUTO,
    21 => LENNY_CTL_PAN,
    _ => throw ArgumentError('Unknown value for lenny_control_cmd: $value'),
  };
}

final class lenny_control_state extends ffi.Struct {
  @ffi.Uint8()
  external int af_mode;

  @ffi.Int32()
  external int exposure_comp;

  @ffi.Uint8()
  external int exposure_lock;

  @ffi.Uint8()
  external int wb_lock;

  @ffi.Uint8()
  external int torch;

  @ffi.Uint8()
  external int lens_id;

  @ffi.Uint16()
  external int zoom;

  @ffi.Uint8()
  external int battery;

  @ffi.Uint8()
  external int charging;

  @ffi.Uint16()
  external int pan_x;

  @ffi.Uint16()
  external int pan_y;

  static ffi.Pointer<lenny_control_state> $allocate(
    ffi.Allocator $allocator, {
    required int af_mode,
    required int exposure_comp,
    required int exposure_lock,
    required int wb_lock,
    required int torch,
    required int lens_id,
    required int zoom,
    required int battery,
    required int charging,
    required int pan_x,
    required int pan_y,
  }) => $allocator<lenny_control_state>()
    ..ref.af_mode = af_mode
    ..ref.exposure_comp = exposure_comp
    ..ref.exposure_lock = exposure_lock
    ..ref.wb_lock = wb_lock
    ..ref.torch = torch
    ..ref.lens_id = lens_id
    ..ref.zoom = zoom
    ..ref.battery = battery
    ..ref.charging = charging
    ..ref.pan_x = pan_x
    ..ref.pan_y = pan_y;
}

enum lenny_event {
  LENNY_EVENT_STATE(1),
  LENNY_EVENT_APPROVAL_NEEDED(2),
  LENNY_EVENT_STREAM_START(3),
  LENNY_EVENT_STREAM_STATUS(4),
  LENNY_EVENT_CONTROL_STATE(5),
  LENNY_EVENT_CONTROL_ACK(6);

  final int value;
  const lenny_event(this.value);

  static lenny_event fromValue(int value) => switch (value) {
    1 => LENNY_EVENT_STATE,
    2 => LENNY_EVENT_APPROVAL_NEEDED,
    3 => LENNY_EVENT_STREAM_START,
    4 => LENNY_EVENT_STREAM_STATUS,
    5 => LENNY_EVENT_CONTROL_STATE,
    6 => LENNY_EVENT_CONTROL_ACK,
    _ => throw ArgumentError('Unknown value for lenny_event: $value'),
  };
}

final class lenny_identity extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> device_id;

  external ffi.Pointer<ffi.Char> device_name;

  external ffi.Pointer<ffi.Char> app_version;

  @ffi.Uint8()
  external int platform;
}

final class lenny_lens extends ffi.Struct {
  @ffi.Uint8()
  external int lens_id;

  @ffi.Uint8()
  external int facing;

  external ffi.Pointer<ffi.Char> label;

  static ffi.Pointer<lenny_lens> $allocate(
    ffi.Allocator $allocator, {
    required int lens_id,
    required int facing,
    required ffi.Pointer<ffi.Char> label,
  }) => $allocator<lenny_lens>()
    ..ref.lens_id = lens_id
    ..ref.facing = facing
    ..ref.label = label;
}

final class lenny_lens_caps extends ffi.Struct {
  external ffi.Pointer<lenny_mode> modes;

  @ffi.Size()
  external int mode_count;

  @ffi.Uint16()
  external int zoom_min;

  @ffi.Uint16()
  external int zoom_max;

  @ffi.Uint16()
  external int zoom_base;

  static ffi.Pointer<lenny_lens_caps> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<lenny_mode> modes,
    required int mode_count,
    required int zoom_min,
    required int zoom_max,
    required int zoom_base,
  }) => $allocator<lenny_lens_caps>()
    ..ref.modes = modes
    ..ref.mode_count = mode_count
    ..ref.zoom_min = zoom_min
    ..ref.zoom_max = zoom_max
    ..ref.zoom_base = zoom_base;
}

final class lenny_mode extends ffi.Struct {
  @ffi.Uint16()
  external int width;

  @ffi.Uint16()
  external int height;

  @ffi.Uint16()
  external int fps_num;

  @ffi.Uint16()
  external int fps_den;

  static ffi.Pointer<lenny_mode> $allocate(
    ffi.Allocator $allocator, {
    required int width,
    required int height,
    required int fps_num,
    required int fps_den,
  }) => $allocator<lenny_mode>()
    ..ref.width = width
    ..ref.height = height
    ..ref.fps_num = fps_num
    ..ref.fps_den = fps_den;
}

final class lenny_peer_info extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> device_id;

  @ffi.Array.multi([64])
  external ffi.Array<ffi.Char> name;

  @ffi.Uint8()
  external int platform;

  @ffi.Uint32()
  external int controls;

  @ffi.Uint8()
  external int lens_count;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> lens_ids;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> lens_facing;

  @ffi.Array.multi([8, 32])
  external ffi.Array<ffi.Array<ffi.Char>> lens_labels;
